app/globals.css
/* ... */
.search > button {
  cursor: pointer;
  position: absolute;
  top: 17px;
  left: 25px;
}

.search > button > i {
  transition: all 0.2s;
  color: rgba(0, 0, 0, 0.73);
}

.search__icon:hover,
.search__icon:focus {
  color: rgba(0, 0, 0, 0.93);
}

.search input {
  height: 56px;
  width: 100%;
  border-radius: 4px;
  padding-left: 55px;
  padding-right: 15px;
  padding-bottom: 2px;
  color: rgba(0, 0, 0, 0.9);
  caret-color: rgba(0, 0, 0, 0.5);
  background-color: rgba(255, 255, 255, 0.9);
  transition: all 0.2s, box-shadow 0.1s;
}

.search input::selection {
  background-color: rgba(0, 0, 0, 0.25);
}

.search input:hover,
.search input:focus {
  background-color: rgba(255, 255, 255, 1);
}

.search input:focus {
  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.4);
}

.search input::placeholder {
  color: rgba(0, 0, 0, 0.7);
  font-weight: 500;
  font-size: 15px;
}

.search__input--invalid {
  box-shadow: 0 0 0 4px rgba(47, 19, 19, 0.729);
}

/* CONTAINER */
.container {
  margin: 0 12px;
  margin-top: 27px;
  margin-left: auto;
  margin-right: auto;
  height: 616px;
  width: 976px;
  background-color: #fff;
  border-radius: 8px;
  display: flex;
  border-top-right-radius: 9px;
  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.07);
  margin-top: 40px;
  animation: intro 0.3s 0.2s backwards;
}

/* SIDEBAR */
.sidebar {
  width: 340px;
  display: flex;
  flex-direction: column;
}

/* SEARCH RESULTS */
.search-results {
  width: 340px;
  display: flex;
  flex-direction: column;
  position: relative;
  cursor: default;
}

.sidebar__top {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 20px;
  border-bottom: 1px solid #e8edf0;
}

/* COUNT */
.count {
  font-size: 12px;
}

/* SORTING */
.sorting {
  display: flex;
  align-items: center;
  gap: 4px;
}

.sorting > i {
  font-size: 11px;
  color: #4c4f50;
  margin-right: 5px;
}

.sorting__button {
  font-size: 10px;
  text-transform: uppercase;
  background-color: #e8edf0;
  padding: 6px 8px;
  border-radius: 3px;
  margin-left: 2px;
  cursor: pointer;
  transition: all 0.2s;
}

.sorting__button:hover,
.sorting__button:focus {
  background-color: #d0d5d8;
}

.sorting__button--active,
.sorting__button--active:hover,
.sorting__button--active:focus {
  color: #fff;
  background-color: #3c4041;
}

/* PAGINATION */
.pagination {
  height: 40px;
  margin-top: auto;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 20px 1px;
  border-top: 1px solid #e8edf0;
}

.pagination__button {
  font-size: 10px;
  padding: 4px 10px;
  border-radius: 500px;
  color: #747c82;
  background-color: #eceff2;
  cursor: pointer;
  transition: all 0.2s, visibility 0s;
  gap: 2px;
  display: flex;
  align-items: center;
}

.pagination__button svg {
  width: 10px;
  transform: translateY(1px);
}

.pagination__button:hover,
.pagination__button:focus {
  background-color: #dde2e6;
}

.pagination__button--hidden {
  visibility: hidden;
}

.pagination__button--next {
  margin-left: auto;
}

.pagination__button--back .pagination__icon {
  margin-right: 3px;
}

.pagination__button--next .pagination__icon {
  margin-left: 3px;
}

.pagination__button > span {
  font-weight: 500;
}
.pagination__icon {
  font-size: 8px;
  color: #9fa6b0;
}

/* JOB DETAILS */
.job-details {
  flex: 1;
  background-color: #eff2f5;
  position: relative;
  border-top-right-radius: 12px;
  border-bottom-right-radius: 8px;
}

.job-details__start-view {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.job-details__start-view > p:first-child {
  opacity: 0.55;
  width: 275px;
  text-align: center;
  color: #0d1114;
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 10px;
}

.job-details__start-view > p:nth-child(2) {
  opacity: 0.55;
  color: #24292d;
  font-size: 14px;
  width: 275px;
  text-align: center;
}

.job-details > div {
  height: 100%;
}

.job-details > div > img {
  width: 100%;
  height: 174px;
  position: absolute;
  z-index: 0;
  top: 0;
  object-fit: cover;
  border-top-right-radius: 8px;
  user-select: none;
}

.job-details__other {
}

.job-details__footer {
  margin-left: 42px;
  margin-right: 42px;
  margin-top: 33px;
  padding-top: 13px;
  border-top: 1px solid #dce2e8;
}

.job-details__footer-text {
  color: #858b8f;
  font-size: 10px;
}

/* APPLY BTN */
.apply-btn {
  position: absolute;
  background-color: var(--color-accent);
  z-index: 2;
  color: rgba(255, 255, 255, 0.92);
  font-size: 11px;
  padding: 5px 10px 6px;
  border-radius: 3px;
  top: 12px;
  right: 12px;
  cursor: pointer;
  text-transform: uppercase;
  transition: all 0.2s;
  display: flex;
  align-items: center;
}

.apply-btn:hover,
.apply-btn:focus {
  background-color: var(--color-accent-hover);
  color: rgba(255, 255, 255, 1);
}

.apply-btn__icon {
  color: rgba(255, 255, 255, 0.65);
  font-size: 8px;
  margin-left: 4px;
  margin-top: -1px;
}

/* JOB INFO */
.job-info {
  position: relative;
  z-index: 1;
  margin-bottom: 40px;
  display: flex;
  column-gap: 16px;
  padding-top: 120px;
}

.job-info::before {
  content: '';
  position: absolute;
  width: 100%;
  height: 174px;
  top: 0;
  left: 0;
  background-image: linear-gradient(
    to top,
    rgba(0, 0, 0, 0.7),
    rgba(0, 0, 0, 0.15)
  );
  z-index: -1;
  border-top-right-radius: 8px;
}

.job-info__left {
  padding-left: 42px;
}

.job-info__right {
  flex: 1;
  min-width: 0;
  padding-right: 42px;
}

.job-info__badge {
  width: 55px;
  height: 70px;
  background-color: #d0d335;
  border-radius: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 22px;
  font-weight: 600;
  margin-bottom: 13px;
}

.job-info__below-badge {
  display: flex;
  justify-content: space-between;
}

.job-info__time {
  font-size: 12px;
  transform: translateY(1px);
  color: #494d4f;
}

.bookmark-btn {
  cursor: pointer;
}

.bookmark-btn:hover svg {
  color: var(--color-accent);
}
/* ... */

